Name:                nbd
Version:             0.1.0.0
Synopsis:            A Haskell library to implement NBD (Network Block Device) servers
-- Description:         
Author:              Nicolas Trangez
Maintainer:          ikke@nicolast.be
Homepage:            https://github.com/NicolasT/nbd

License:             LGPL-2.1
License-File:        LICENSE
Copyright:           Copyright (c) 2012, Nicolas Trangez

Category:            Network

Build-Type:          Simple
Cabal-Version:       >=1.8

Source-Repository head
  Type:              git
  Location:          git://github.com/NicolasT/nbd.git

Library
  Exposed-Modules:     Network.NBD
                       Network.NBD.Client
                       Network.NBD.Server
  Other-Modules:       Network.NBD.Types
                       Network.NBD.Utils
                       Network.NBD.Constants
                       Data.Conduit.Cereal
  Build-Depends:       base >= 4 && < 5,
                       mtl,
                       transformers,
                       text,
                       cereal,
                       bytestring,
                       conduit >= 0.5
  Hs-Source-Dirs:      src
  Ghc-Options:         -Wall -fwarn-incomplete-patterns -O3

Executable nbd-demo-server
  Main-Is:             server.hs
  Other-Modules:       System.Posix.IO.Extra
  Build-Depends:       base >= 4 && < 5,
                       unix,
                       network,
                       containers,
                       transformers,
                       text,
                       monad-control,
                       resourcet,
                       cereal,
                       bytestring,
                       unix-bytestring,
                       conduit >= 0.5,
                       network-conduit >= 0.6,
                       simple-sendfile,
                       nbd
  Hs-Source-Dirs:      bin
  Ghc-Options:         -Wall -fwarn-incomplete-patterns -O3 -rtsopts -threaded

Executable nbd-demo-client
  Main-Is:             client.hs
  Build-Depends:       base >= 4 && < 5,
                       transformers,
                       text,
                       conduit >= 0.5,
                       network-conduit >= 0.6,
                       nbd
  Hs-Source-Dirs:      bin
  Ghc-Options:         -Wall -fwarn-incomplete-patterns -O3 -rtsopts -threaded

Test-suite test-negotiate
  Type:                exitcode-stdio-1.0
  Main-is:             test_negotiate.hs
  Build-Depends:       base >= 4 && < 5,
                       mtl,
                       transformers,
                       containers,
                       text,
                       bytestring,
                       conduit >= 0.5,
                       stm,
                       stm-conduit,
                       nbd
  Hs-Source-Dirs:      test
  Ghc-Options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
